<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView 
        android:id="@+id/textViewTitulo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/labelService" />
    
    <Button 
        android:id="@+id/buttonService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitulo3"
        android:layout_below="@+id/textViewTitulo3"
        android:layout_marginTop="10dp"
        android:text="@string/botaoService" />
    
    <TextView 
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonService"
        android:layout_below="@+id/buttonService"
        android:layout_marginTop="10dp"
        android:text="@string/labelResposta" />

</RelativeLayout>
