<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/buttonIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/botaoIniciar" />

    <Button
        android:id="@+id/buttonRepetir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonIniciar"
        android:layout_alignBottom="@+id/buttonIniciar"
        android:layout_centerHorizontal="true"
        android:text="@string/botaoRepetir" />

    <Button
        android:id="@+id/buttonParar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonRepetir"
        android:layout_alignBottom="@+id/buttonRepetir"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:text="@string/botaoParar" />

</RelativeLayout>